samples/_failures_safe/1761592826_86017a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b23cb053.c: In function ‘main’:
./samples/SAFE/__tmp_b23cb053.c:150:26: error: expected ‘;’ at end of input
  150 |         choice = read_int
      |                          ^
      |                          ;
./samples/SAFE/__tmp_b23cb053.c:150:9: error: expected declaration or statement at end of input
  150 |         choice = read_int
      |         ^~~~~~
./samples/SAFE/__tmp_b23cb053.c:150:9: error: expected declaration or statement at end of input
